# MCUP

./: .coveragerc  DEVELOPING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: docs.yml  package-main.yml  publish.yml
_build/lib.linux-x86_64-2.7/mcup/: __init__.py  mcup.py
benchmarks/: run_benchmarks.py
crafting/: A6.py  test01.py  test02.py
crafting/mcup/: __init__.py  experiment.py  lsq.py  pee.py
crafting/pkl/: linear01.pkl  linear02.pkl  linear03.pkl  linear_10_10.pkl  linear_1_10.pkl  linear_2_0.pkl  linear_2_2.pkl  linear_5_5.pkl
docs/: generate_performance_figures.py  generate_tutorial4_figure.py  generate_tutorial_figures.py  index.md
docs/about/: changelog.md
docs/api/: data_generator.md  deming.md  mcup.rst  modules.rst  weighted.md  xy_weighted.md
docs/examples/: measurement-error-in-regression.ipynb
docs/guide/: choosing-estimator.md  getting-started.md  method-comparison.md  performance.md
docs/source/: conf.py  index.rst  mcup.rst
docs/superpowers/plans/: 2026-04-03-mcup-0.2.0.md
docs/superpowers/specs/: 2026-04-03-mcup-redesign-design.md
docs/tutorials/: method-comparison.md  multivariable-regression.md  radioactive-decay.md  sensor-calibration.md
mcup/: __init__.py  _analytical.py  _mc.py  _utils.py  base.py  config.py  data_generator.py  deming.py  mcup.py  pee.py  test.py  utils.py  weighted.py  xy_weighted.py
tests/: test_config.py  test_data_generator.py  test_deming.py  test_mcup.py  test_multivariate.py  test_pee.py  test_utils.py  test_weighted.py  test_xy_weighted.py
