[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcup"
version = "0.2.0"
description = "Monte Carlo Uncertainty Propagation for regression with measurement errors"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Daniel Herman", email = "daniel.herman@protonmail.com"}]
keywords = ["physics", "statistics", "error", "uncertainty", "propagation", "regression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.8.0",
    "numdifftools>=0.9.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "twine>=4.0",
    "build>=0.10",
]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.20",
]

[project.urls]
Repository = "https://github.com/detrin/MCUP"

[tool.setuptools]
packages = ["mcup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=mcup --cov-report=term-missing"

[tool.coverage.run]
source = ["mcup"]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
